--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marko Milanovic",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "knex": "^2.2.0",
